# server

./: Cargo.toml  config.toml
src/: main.rs  template.rs  view.rs
src/analysis/: config.rs  db.rs  lang_tran.rs  mod.rs  mytime.rs
static/css/: chrome.css  general.css  variables.css
static/fonts/: fonts.css
static/js/: book.js  highlight.js  language.js  sn.js  table_sort.js
templates/: all_cell_record.html  base.html  cell_record_bst.html  cell_record_fst.html  day_yield_bst.html  day_yield_fst.html  fail_detail_bst.html  fail_detail_fst.html  homepage.html  keyname.html  pf_data_bst.html  pf_data_fst.html  portconfig.html  sn_record.html
