[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
askama = "0.12.1"
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["full"] }
http = "1.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = "0.4.13"
tower-layer = "0.3.2"
tower-http = { version = "0.5.0", features = ["fs", "normalize-path"] }
maplit = "1.0.2"
once_cell = "1.19.0"
toml = { version = "0.8.8", features = ["parse"] }
serde = { version = "1.0.195", features = ["derive"] }
chrono = "0.4.31"
chrono-tz = "0.8.5"
regex = "1.10.2"
rusqlite = { version = "0.30.0", features = ["bundled"] }


[profile.release]
codegen-units = 1
lto = "fat"
strip = "debuginfo"